--- a/public/CSS/home-page.css
+++ b/public/CSS/home-page.css
@@ -2,13 +2,19 @@
     display: block;
     margin: 0 auto;
     max-height: 903px;
-    width:100%;
     border-bottom: 1px solid black;
+}
+
+.item {
+    min-height: 400px;
 }
 
 #Carousel{
     margin-top: -20px!important;
     margin-bottom: 20px;
+    background-color: #252525;
+    -webkit-transition: width 1s;
+    transition: width 1s;
 }
 
 .carousel-indicators {
