--- a/public/CSS/home-page.css
+++ b/public/CSS/home-page.css
@@ -5,16 +5,11 @@
     border-bottom: 1px solid black;
 }
 
-.item {
-    min-height: 400px;
-}
-
 #Carousel{
     margin-top: -20px!important;
     margin-bottom: 20px;
     background-color: #252525;
-    -webkit-transition: width 1s;
-    transition: width 1s;
+    height:903px;
 }
 
 .carousel-indicators {
@@ -29,15 +24,22 @@
 
 .page-info-carousel {
     position: absolute;
-    height:30%;
-    width:30%;
-    background-color: rgba(37,37,37,0.5);
+    height:200px;
+    width:40%;
     color:white;
-    right:0;
-    top:55%;
-    padding-top: 80px;
+    top:70%;
     word-wrap: break-word;
     text-align: center;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+    overflow: hidden;
+    transition: background-color 0.5s ease;
+    background-color: rgba(25,25,25,0.3);
+}
+
+.page-info-carousel:hover {
+    background-color: rgba(25,25,25,0.7);
 }
 
 /*
