--- a/public/views/index.html
+++ b/public/views/index.html
@@ -23,6 +23,7 @@
         <script src="/controllers/pages.js"></script>
         <script src="/controllers/test.js"></script>
         <script src="/controllers/project.js"></script>
+        <script src="/controllers/footer.js"></script>
         <script src="/controllers/image.js"></script>
 	    <script src="/controllers/profile.js"></script>
 	    <script src="/controllers/login.js"></script>
@@ -49,7 +50,6 @@
                     </button>
                   
                 </div>
-                <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-left">
                         <li><a href="/">Home</a></li>
@@ -77,7 +77,7 @@
 
         </div>
 
-        <footer class="footer">
+        <footer class="footer" ng-controller="FooterController">
             <div class="container">
                 <div class="col-sm-4">                    
                     <div class="row">
