--- a/public/CSS/home-page.css
+++ b/public/CSS/home-page.css
@@ -29,16 +29,24 @@
 
 .page-info-carousel {
     position: absolute;
-    height:30%;
-    width:30%;
-    background-color: rgba(37,37,37,0.5);
+    height:200px;
+    width:40%;
     color:white;
-    right:0;
-    top:55%;
-    padding-top: 80px;
+    top:70%;
     word-wrap: break-word;
     text-align: center;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+    overflow: hidden;
+    transition: background-color 0.5s ease;
+    background-color: rgba(25,25,25,0.3);
 }
+
+.page-info-carousel:hover {
+    background-color: rgba(25,25,25,0.7);
+}
+
 
 /*
 Student work.
@@ -60,7 +68,7 @@ Student work.
     width:200px;
     border-radius: 50%;
     background-color: rgba(255,255,255,0.5);
-    border: 1px solid black;
+    border: 5px solid white;
     left:calc(50% - 100px);
     top:calc(50% - 110px);
     padding-top: 80px;
