--- a/public/views/index.html
+++ b/public/views/index.html
@@ -101,6 +101,7 @@
 
         <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+        <script src="../js/jquery.cookie.js"></script>
         <script src="../js/froala_editor.min.js"></script>
         <script src="../js/plugins/block_styles.min.js"></script>
         <script src="../js/plugins/colors.min.js"></script>
