--- a/public/views/addproject.html
+++ b/public/views/addproject.html
@@ -130,6 +130,8 @@
 
     <div class="container">
 
+        <a href="#" id="vote" data-id="{{ project._id }}" class="vote btn btn-default text-center">Vote</a>
+
         <div simpletextform id="simpleedit" class="project-title-edit"></div>
     
         <div class="project-layouts" id="project-layouts">
