--- a/public/views/projects.html
+++ b/public/views/projects.html
@@ -23,15 +23,42 @@
 
     </div>
  
-    <div ng-repeat="project in projects | filter:search">
-        <div class="col-xs-12 col-md-4"s>
-            <div class="unplaced">
-                <img src="{{ project.banner }}" alt="banner">
-                <div class="page-info">
-                   <h3>{{ project.title }}</h3> 
-                </div
+    <div class="slide-student">
+        <div ng-repeat="project in projects | filter:search track by $index">
+            <div class="col-xs-12 col-md-4" ng-show="$index >= 0 && $index < 6">
+                <div class="unplaced">
+                    <img src="{{ project.banner }}" alt="banner">
+                    <div class="page-info">
+                       <h3>{{ project.title }}</h3>
+                       <p>{{ $index + 1}}</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
+
+    <div class="slide-student">
+        <div ng-repeat="project in projects | filter:search track by $index">
+            <div class="col-xs-12 col-md-4" ng-show="$index >= 1 && $index < 6">
+                <div class="unplaced">
+                    <img src="{{ project.banner }}" alt="banner">
+                    <div class="page-info">
+                       <h3>{{ project.title }}</h3>
+                       <p>{{ $index + 1}}</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
 </div>
+    
+    <div id="left-student-slide" class="left carousel-control" onclick="clicked('left')">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+    </div>
+    <span id="right-student-slide" class="right carousel-control" onclick="clicked('right')">
+       <span class="glyphicon glyphicon-chevron-right"></span>
+    </span>
 
