--- a/public/views/index.html
+++ b/public/views/index.html
@@ -78,7 +78,7 @@
 
         </div>
 
-        <!-- <footer class="footer">
+        <footer class="footer">
             <div class="container">
                 <div class="col-sm-4">                    
                     <div class="row">
@@ -98,7 +98,7 @@
                     <h3><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><span class="fa fa-facebook"></span></a></h3>
                 </div>              
             </div>
-        </footer> -->
+        </footer>
 
         <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
@@ -112,6 +112,5 @@
         <script src="../js/fly-out-menu.js"></script>
         <script src="../js/clamp.js"></script>
         <script src="../js/home-clamp.js"></script>
-        <script src="../js/student-work-slider.js"></script>
     </body>
 </html>
