--- a/public/CSS/home-page.css
+++ b/public/CSS/home-page.css
@@ -29,24 +29,16 @@
 
 .page-info-carousel {
     position: absolute;
-    height:200px;
-    width:40%;
+    height:30%;
+    width:30%;
+    background-color: rgba(37,37,37,0.5);
     color:white;
-    top:70%;
+    right:0;
+    top:55%;
+    padding-top: 80px;
     word-wrap: break-word;
     text-align: center;
-    margin: 0 auto;
-    left: 0;
-    right: 0;
-    overflow: hidden;
-    transition: background-color 0.5s ease;
-    background-color: rgba(25,25,25,0.3);
 }
-
-.page-info-carousel:hover {
-    background-color: rgba(25,25,25,0.7);
-}
-
 
 /*
 Student work.
@@ -68,7 +60,7 @@ Student work.
     width:200px;
     border-radius: 50%;
     background-color: rgba(255,255,255,0.5);
-    border: 5px solid white;
+    border: 1px solid black;
     left:calc(50% - 100px);
     top:calc(50% - 110px);
     padding-top: 80px;
