--- a/public/views/projects.html
+++ b/public/views/projects.html
@@ -1,37 +1,3 @@
-<div class="container">
-    <div class="project-actions">
-        <a menuside href="#" class="menu-toggle btn btn-default pull-left">Toggle Filter</a>
-        <br><br><br><br><br>
-    </div>
+<div ng-repeat="project in projects">
+    <h2><a href="/editproject/{{ project._id }}">{{ project.title }}</a> <a href="/project/{{ project._id }}">Bekijk</a></h2>
 </div>
-
-
-
-<div class="row full-row">
-    <div class="menu-side">
-        <h3> Filter </h3>
-
-        <div id="Title">
-            <label for="Title-field">Project Title</label>
-            <input id="Title-field" ng-model="search.title">
-        </div>
-
-        <label for="Semester-Date-field">Semester Dates</label>
-        <select ng-model="search.$">
-            <option id="Semester-Date-field" ng-repeat="project in projects" value="{{project.date}}">{{project.date}}</option>
-        </select>
-
-    </div>
- 
-    <div ng-repeat="project in projects | filter:search">
-        <div class="col-xs-12 col-md-4"s>
-            <div class="unplaced">
-                <img src="{{ project.banner }}" alt="banner">
-                <div class="page-info">
-                   <h3>{{ project.title }}</h3> 
-                </div
-            </div>
-        </div>
-    </div>
-</div>
-
