--- a/public/CSS/home-page.css
+++ b/public/CSS/home-page.css
@@ -42,17 +42,22 @@
     background-color: rgba(25,25,25,0.7);
 }
 
+
 /*
 Student work.
 */
 
 .unplaced {
-    height:calc(903px/3);
+    height:300px;
     margin-bottom: 30px;
 }
 
+.unplaced:hover {
+
+}
+
 .unplaced > img {
-    height:100%!important;
+    height:auto;
     width:100%;
 }
 
@@ -61,8 +66,8 @@ Student work.
     height:200px;
     width:200px;
     border-radius: 50%;
-    background-color: rgba(255,255,255,0.5);
-    border: 1px solid black;
+    background-color: rgba(255,255,255,0.8);
+    border: 5px solid white;
     left:calc(50% - 100px);
     top:calc(50% - 110px);
     padding-top: 80px;
