--- a/public/views/index.html
+++ b/public/views/index.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="../css/froala_content.min.css">
         <link rel="stylesheet" href="../css/mainCustom.css">
         <link rel="stylesheet" href="../css/home-page.css">
+        <link rel="stylesheet" href="../css/student-work-page.css">
 
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular.min.js"></script>
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular-route.min.js"></script>
@@ -112,5 +113,6 @@
         <script src="../js/fly-out-menu.js"></script>
         <script src="../js/clamp.js"></script>
         <script src="../js/home-clamp.js"></script>
+        <script src="../js/student-work-slider.js"></script>
     </body>
 </html>
