--- a/public/views/projects.html
+++ b/public/views/projects.html
@@ -30,7 +30,7 @@
                     <img src="{{ project.banner }}" alt="banner">
                     <div class="page-info">
                        <h3>{{ project.title }}</h3>
-                       <p>{{ $index + 1}}</p>
+                       <p>{{ project.votes }}</p>
                     </div>
                 </div>
             </div>
@@ -44,7 +44,7 @@
                     <img src="{{ project.banner }}" alt="banner">
                     <div class="page-info">
                        <h3>{{ project.title }}</h3>
-                       <p>{{ $index + 1}}</p>
+                       <p>{{ project.votes }}</p>
                     </div>
                 </div>
             </div>
