--- a/public/views/home.html
+++ b/public/views/home.html
@@ -31,6 +31,7 @@
 <!--                <img src=" {{ project.banner }} " alt="banner"> -->
                     <div class="page-info" >
                         <h3>{{ project.title }}</h3>
+                        <p class="visibility-of-votes">{{ project.votes }}</p>
                     </div>
                 </div>
             </a>
