--- a/public/views/addproject.html
+++ b/public/views/addproject.html
@@ -26,6 +26,33 @@
     </div>
 </div>
 
+<div class="modal fade" id="logoModal" tabindex="-1" role="dialog" aria-labelledby="logoModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <form id="logoform" enctype="multipart/form-data"> 
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                    <h4 class="modal-title" id="logoModalLabel">Logo</h4>
+                </div>
+                <div class="modal-body">
+                    <h2>Upload Project Logo</h2>
+
+                    <div>
+                        <label for="inputImage">Image</label>
+                        <input id="inputImage" type="file" accept="image/*" name="image">
+
+                        <img ng-show="image" ng-src="{{ image.url }}" type="{{ image.file.type }}">
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button uploadlogoform type="submit" class="btn btn-primary">Save changes</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
 <div class="modal fade" id="textModal" tabindex="-1" role="dialog" aria-labelledby="textModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
@@ -122,7 +149,7 @@
             <!-- </div> -->
             <div class="project-logo">
                 <!-- <div>  -->
-                    <div data-toggle="modal" data-target="#imageModal" class="image select-image"><i class="fa fa-plus-circle"></i> logo</div>
+                    <div data-toggle="modal" data-target="#logoModal" class="image select-image"><i class="fa fa-plus-circle"></i> logo</div>
                 <!-- </div> -->
             </div>
         </div>
