--- a/public/views/index.html
+++ b/public/views/index.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="../css/mainCustom.css">
         <link rel="stylesheet" href="../css/home-page.css">
         <link rel="stylesheet" href="../css/student-work-page.css">
+        <link rel="stylesheet" href="../css/customBob.css">
 
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular.min.js"></script>
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular-route.min.js"></script>
@@ -23,6 +24,7 @@
         <script src="/controllers/home.js"></script>
         <script src="/controllers/pages.js"></script>
         <script src="/controllers/test.js"></script>
+        <script src="/controllers/profiles.js"></script>
         <script src="/controllers/project.js"></script>
         <script src="/controllers/footer.js"></script>
         <script src="/controllers/image.js"></script>
@@ -36,12 +38,7 @@
     <body class="menu menu-right">
 
         <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-
-            <div class="container-fluid">
-                <!-- Brand and toggle get grouped for better mobile display -->
-            <a class="navbar-brand" href="/">
-                <img alt="Brand" src="images/ICA.png"></img>
-            </a>
+            <div class="container-fluid">          
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                         <span class="sr-only">Toggle navigation</span>
@@ -49,30 +46,37 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                  
+                    <a class="navbar-brand" href="/"><img alt="Brand" src="images/ICA.png"></img></a>
                 </div>
+
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav navbar-left">
-                        <li><a href="/">Home</a></li>
+                    <ul class="nav navbar-nav">
+                        <li><a href="/">Home <span class="sr-only">(current)</span></a></li>
                         <li><a href="/projects">Student Work</a></li>
                         <li><a href="/profiles">Profiles</a></li>
                         <li><a href="/about">About</a></li>
-                        <li><a href="/admin">Admin Panel</a></li>
+                        <!-- <li><a href="/admin">Admin Panel</a></li> -->
                     </ul>
+        
                     <ul class="nav navbar-nav navbar-right">
-                        <form class="navbar-form navbar-left" role="search">                            
-                            <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Search">
-                            </div>
-                            <button type="submit" class="btn btn-default">Submit</button>
-                            <a href="/addproject" class="btn btn-default">Add a Project</a>
+                        <form action="/addproject" class="navbar-form navbar-left" role="search">
+                            <button type="submit" class="btn btn-default">Add Project</button>
                         </form>
-                        <li><a href="/profile">Login</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
 
+                        <li ng-hide="$root.loggedin"><a href="/login">Login</a></li>
+
+                        <li ng-show="$root.loggedin" class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li><a href="/profile">My profile</a></li>
+                                <li><a href="/editprofile">Edit portfolio</a></li>
+                                <li class="divider"></li>
+                                <li><a logout href="">Logout</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div><!-- /.navbar-collapse -->
+            </div><!-- /.container-fluid -->
+        </nav>
 
         <div class="margin-view" ng-view>
 
