Updated semesters and profiles

--- a/public/views/profiles.html
+++ b/public/views/profiles.html
@@ -2,6 +2,7 @@
     
     <a href="/profiles/{{ profile._id }}" class="btn btn-default">Go to semesters</a>
 
+    <div><h4>{{ profile.main }} <small>(Dit nummer is het nummer van het hoofdprofiel dat aan te geven is in het adminpanel. Je kan dit nummer gebruiken om bijvoorbeeld een kleur te laten zien of een bepaalde class)</small><h4></div>
     <div>{{ profile._id }}</div>
     <div>{{ profile.name }}</div>
     <div>{{ profile.description }}</div>
