--- a/public/views/adminpanel.html
+++ b/public/views/adminpanel.html
@@ -54,6 +54,13 @@
                             </div>
 
                             <div class="form-group">
+                                <label for="mainprofile">Main profile</label>
+                                <select id="mainprofile" class="form-control" ng-model="formDataProfile.main" required >
+                                    <option ng-repeat="mainprofile in mainprofiles" value="{{ mainprofile.number }}">{{ mainprofile.name }}</option>
+                                </select>
+                            </div>
+
+                            <div class="form-group">
                                 <button type="submit" class="btn btn-default" ng-click="addProfile()">Save profile</button>
                             </div>
 
@@ -75,6 +82,13 @@
                             <div class="form-group">
                                 <label for="profiledescription">Profile description</label>
                                 <textarea class="form-control" id="profiledescription" placeholder="Profile description" rows="5" ng-model="profile.description" required></textarea>
+                            </div>
+
+                            <div class="form-group">
+                                <label for="mainprofile">Main profile</label>
+                                <select id="mainprofile" class="form-control" ng-model="profile.main" required >
+                                    <option ng-repeat="mainprofile in mainprofiles" value="{{ mainprofile.number }}">{{ mainprofile.name }}</option>
+                                </select>
                             </div>
 
                             <div class="form-group">
@@ -137,16 +151,6 @@
                             </div>
 
                             <div class="form-group">
-                                <label for="semesterstartdate">Semester start date</label>
-                                <input type="date" placeholder="yyyy-MM-dd" min="2014-01-01" class="form-control" id="semesterstartdate" ng-model="formDataSemester.startdate" required>
-                            </div>
-
-                            <div class="form-group">
-                                <label for="semesterenddate">Semester end date</label>
-                                <input type="date" placeholder="yyyy-MM-dd" min="2014-01-01" class="form-control" id="semesterenddate" ng-model="formDataSemester.enddate" required>
-                            </div>
-
-                            <div class="form-group">
                                 <button type="submit" class="btn btn-default" ng-click="addSemester()">Save semester</button>
                             </div>
 
@@ -175,16 +179,6 @@
                                 <select id="semesterprofile" class="form-control" ng-model="semester.profileid" required >
                                     <option ng-repeat="profile in profiles" value="{{ profile._id }}">{{ profile.name }}</option>
                                 </select>
-                            </div>
-
-                            <div class="form-group">
-                                <label for="semesterstartdate">Semester start date</label>
-                                <input type="date" min="2014-01-01" class="form-control" id="semesterstartdate" ng-model="semester.startdate" required>
-                            </div>
-
-                            <div class="form-group">
-                                <label for="semesterenddate">Semester end date</label>
-                                <input type="date" min="2014-01-01" class="form-control" id="semesterenddate" ng-model="semester.enddate" required>
                             </div>
 
                             <div class="form-group">
