--- a/public/views/addproject.html
+++ b/public/views/addproject.html
@@ -116,7 +116,7 @@
     <div class="project-actions">
         <a menuside href="#" class="menu-toggle btn btn-default pull-left">Layout options</a>
 
-        <a updatecontent href="#" id="save-project" class="save-project btn btn-default text-center">Save Project</a>
+        <a saveproject href="#" id="save-project" class="save-project btn btn-default text-center">Save Project</a>
 
         <div class="form-group projectsemesterform">
 
