--- a/public/views/adminpanel.html
+++ b/public/views/adminpanel.html
@@ -210,7 +210,7 @@
                             <tr ng-repeat="project in projects">
                                 <td>{{ project._id }}</td>
                                 <td>{{ project.title }}</td>
-                                <td><a href="" ng-click="getProjectData(project._id)">Edit</a> / <a href="" ng-click="removeProject(project._id)">Delete</a></td>
+                                <td><a href="" ng-click="editProject(project._id)">Edit</a> / <a href="" ng-click="removeProject(project._id)">Delete</a></td>
                             </tr>
                             
                         </table>
