--- a/public/views/editproject.html
+++ b/public/views/editproject.html
@@ -116,7 +116,7 @@
     <div class="project-actions">
         <a menuside href="#" class="menu-toggle btn btn-default pull-left">Toggle Menu</a>
 
-        <a updateeditcontent href="#" id="save-project" class="save-project btn btn-default text-center">Save</a>
+        <a saveeditproject href="#" id="save-project" class="save-project btn btn-default text-center">Save</a>
 
         <div class="form-group projectsemesterform">
 
