--- a/public/views/index.html
+++ b/public/views/index.html
@@ -57,6 +57,7 @@
                             <button type="submit" class="btn btn-default">Add Project</button>
                         </form>
 
+                        <li ng-hide="$root.loggedin"><a href="/signup">Register</a></li>
                         <li ng-hide="$root.loggedin"><a href="/login">Login</a></li>
 
                         <li ng-show="$root.loggedin" class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
