--- a/public/views/addproject.html
+++ b/public/views/addproject.html
@@ -91,6 +91,21 @@
 
     <hr>
 
+    <div class="layout-item add-layout-image-image">
+        <i class="fa fa-picture-o"></i>
+        <i class="fa fa-picture-o"></i>
+    </div>
+
+    <hr>
+
+    <div class="layout-item add-layout-image-image-image">
+        <i class="fa fa-picture-o"></i>
+        <i class="fa fa-picture-o"></i>
+        <i class="fa fa-picture-o"></i>
+    </div>
+
+    <hr>
+
     <div class="layout-item add-layout-text-image">
         <i class="fa fa-align-left"></i>
         <i class="fa fa-picture-o"></i>
@@ -100,6 +115,12 @@
 
     <div class="layout-item add-layout-image-text">
         <i class="fa fa-picture-o"></i>
+        <i class="fa fa-align-left"></i>
+    </div>
+
+    <hr>
+
+    <div class="layout-item add-layout-text">
         <i class="fa fa-align-left"></i>
     </div>
 
