--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -58,6 +58,7 @@ img {
     width: 380px;
     padding: 10px;
     height: 100%;
+    z-index: 2000;
 }
 
 .project-actions {
@@ -564,12 +565,22 @@ votes
 .visibility-of-votes {
     visibility:hidden;
     opacity:0;
-    transition:visibility 0s linear 0.5s,opacity 0.5s linear;
+    transition:all 0s linear 0.2s,opacity 0.1s linear;
     font-size: 2em;
 }
 
 .unplaced:hover .visibility-of-votes{
+    margin-top: -45px;
     visibility:visible;
     opacity:1;
     transition-delay:0s;
+}
+
+.unplaced:hover .visibility-of-title{
+    visibility:hidden;
+}
+
+.visibility-of-votes > i {
+    font-size: 1em;
+    color:red;
 }
